fix spacing in timelines

--- a/style.css
+++ b/style.css
@@ -693,7 +693,6 @@ section cv
 
 .timeline {
     position: relative;
-    padding: 4px;
 }
 
 .timeline::after {
@@ -709,6 +708,8 @@ section cv
 .timepoint {
     position: relative;
     display: grid;
+    width: calc(100% - 23px);
+    margin-left: 23px;
 }
 
 .timepoint:not(:last-child) {
@@ -719,8 +720,9 @@ section cv
     /* squares */
     content: '';
     position: absolute;
-    width: 10px;
-    height: 10px;
+    margin-left: 2px;
+    width: 9px;
+    height: 9px;
     background-color: var(--white);
     border: 1px solid var(--darkgray);
     border-radius: 0%;
@@ -758,17 +760,13 @@ section cv
 
     .timepoint {
         grid-template-columns: 1fr;
-        left: 21px;
     }
 
     .timepoint::after {
         top: 7px;
         left: -25px;
     }
-}
 
-.timepoint * {
-    margin-right: 10px;
 }
 
 .timepoint-entry p {
